--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,27 +12,10 @@
         android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="10dp"
-        android:background="#bd6bbeb7">
+        android:layout_margin="10dp">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:errorEnabled="true"
-            app:counterEnabled="true"
-            app:counterMaxLength="15">
-
-            <android.support.design.widget.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/et_username"
-                android:hint="User name "
-                android:inputType="text"
-                />
-        </android.support.design.widget.TextInputLayout>
         <android.support.design.widget.TextInputLayout
             android:id="@+id/email"
             android:layout_width="match_parent"
@@ -71,8 +54,19 @@
             android:id="@+id/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="login"
+            android:text="@string/login"
+            android:background="@drawable/my_button_bor"
             android:layout_gravity="center_horizontal" />
+        <Button
+            android:id="@+id/signup"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
+            android:text="@string/signup"
+            android:background="@drawable/my_button_bor"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            />
+
     </LinearLayout>
 
     </ScrollView>
