--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/welcom"
+    android:background="@drawable/youcan"
+    android:layout_margin="10dp"
     tools:context="com.example.zahran.myapplication.SplashScreen">
 
 </LinearLayout>
